[package]
name = "dev-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6"

env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["r2d2","postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
chrono = "^0"
anyhow = "1.0.57"
r2d2 = "0.8.9"
either = "1.6.1"
clap = { version = "3.1.18", features = ["derive"] }

